# Games101-Homework-Win

./: Readme.md
Assignment0/: main.cpp
Assignment1/: main.cpp  rasterizer.cpp
Assignment2/: main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/: Texture.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/: main.cpp
Assignment5/: Renderer.cpp  Triangle.hpp  binary.ppm
Assignment6/: BVH.cpp  BVH.hpp  Bounds3.hpp  Object.hpp  README.md  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp  binary.ppm  main.cpp
Assignment7/: BVH.cpp  BVH.hpp  CMakeLists.txt  Material.hpp  Object.hpp  README.md  Renderer.cpp  Scene.cpp  Sphere.hpp  Triangle.hpp  Vector.hpp  binary.ppm  global.hpp  main.cpp
Assignment7/images/: binary.ppm
Assignment8/: README.md
Assignment8/CGL/src/: viewer.cpp
Assignment8/src/: application.cpp  getopt.c  getopt_init.c  main.cpp  rope.cpp
